Prefer linking to pages site

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </header>
 
       <sectrion>
-      <img src="https://raw.githubusercontent.com/jhawthorn/bccovidpod/main/icon.jpg">
+      <img src="https://covid.hawth.ca/icon.jpg">
 
       <h1>COVID-19 BC Update, Nov 25</h1>
       </section>
