--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>BC Covid 19 Updates podcast</title>
+    <title>BC COVID-19 Updates Podcast - Unofficial - Converted from YouTube</title>
     <style>
       html {
         font-family: serif;
@@ -69,7 +69,7 @@
           Your browser does not support the <code>audio</code> element.
         </audio>
         <a href="https://bccovidpod.s3.us-east-1.amazonaws.com/kvV1EyVoGLM.mp3">MP3 direct link</a><br/>
-        <a href="">Official video (YouTube)</a>
+        <a href="https://www.youtube.com/watch?v=kvV1EyVoGLM">Official video (YouTube)</a>
       </section>
 
       <footer>
